fix: fixed cart display on mobile screen

--- a/src/app/components/cart/_cart.scss
+++ b/src/app/components/cart/_cart.scss
@@ -143,6 +143,7 @@
 @media screen and (max-width: 900px) {
   .cart_inner {
     @include flex(center, space-between, column);
+    gap: 20px;
   }
 
   .sum {
